--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["torstein <t.soernes@gmail.com>"]
 
 [dependencies]
 ndarray = "0.11.2"
+csv = "1.0.0"
+serde = "1.0.70"
+structopt = "0.2.10"
