--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ authors = ["torstein <t.soernes@gmail.com>"]
 csv = "1.0.0"
 serde = "1.0.70"
 structopt = "0.2.10"
-rand = "^0.5.4"
 num-traits = "0.2.5"
 clap = "2.32.0"
 quickersort = "3.0.1"
-ndarray = { git = "https://github.com/bluss/ndarray.git" }
-ndarray-rand = { git = "https://github.com/bluss/ndarray.git" }
+ndarray = "0.12.1"
+ndarray-rand = "0.9.0"
+rand = "0.6.5"
+rand_chacha = "0.1.1"
